# multiserver

./: .gitignore  README.md  manage.py  pyproject.toml
multiserver/: asgi.py  settings.py  urls.py  wsgi.py
multiserver/app/: admin.py  apps.py  models.py  urls.py  views.py
multiserver/app/migrations/: 0001_initial.py
multiserver/app/templates/app/: list.html  server_detail.html  server_list.html
multiserver/settings/: __init__.py  prod.secret.py  settings.py
multiserver/templates/: base.html  confirm.html  obj_confirm_delete.html  obj_form.html
