[tool.poetry]
name = "multiserver"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg = "^3.1.19"
django-bootstrap5 = "^24.2"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 99
exclude = '''
/(
  | media
  | migrations
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
